# NBM_Tracer

./: .gitignore  CMakeLists.txt  README.md
app/: client_app.cpp  server_app.cpp
lib/muian_raytracer/: CMakeLists.txt
lib/muian_raytracer/include/: obj_parser.h
lib/muian_raytracer/resources/part5/: how_to_generate.txt
lib/muian_raytracer/resources/tests/: vector_visual.mtl
lib/muian_raytracer/src/: RayTracer.cpp  RayTracer.h  main.cpp
lib/muian_raytracer/src/loader/: Camera.cpp  Camera.h  Loader.cpp  Loader.h  Material.cpp  Material.h  Scene.cpp  Scene.h  macros.h
lib/muian_raytracer/src/loader/Lights/: Light.h  PointLight.cpp  PointLight.h
lib/muian_raytracer/src/loader/primitives/: Primitive.cpp  Primitive.h  Ray.cpp  Ray.h  hitpoint.h
lib/muian_raytracer/src/loader/primitives/BVH/: BVH.cpp  BVH.h  BVHnode.h
lib/muian_raytracer/src/loader/primitives/BVH/splitters/: CamDiv.cpp  CamDiv.h  Median.cpp  Median.h  ObjectSplitter.cpp  ObjectSplitter.h  SAH.cpp  SAH.h  Splitter.h
lib/muian_raytracer/src/loader/primitives/shapes/: AABB.h  Sphere.cpp  Sphere.h  Torus.cpp  Torus.h  Triangle.cpp  Triangle.h
lib/muian_raytracer/src/obj_debugger/: ObjViewer.cpp  ObjViewer.h
src/: Network.cpp  Network.h  Result.cpp  SerializationHelper.cpp  SerializationHelper.h  Threadpool.cpp  Threadpool.h  TracerInterface.h
src/Client/: Client.cpp  Client.h
src/Results/: BatchedRenderResult.cpp  BatchedRenderResult.h  BitCoinResult.cpp  BitCoinResult.h  RenderPixelResult.cpp  RenderPixelResult.h  Result.cpp  Result.h  ResultFactory.cpp  ResultFactory.h
src/Server/: Server.cpp  Server.h
src/Tasks/: BatchedRender.cpp  BatchedRender.h  MineBitCoin.cpp  MineBitCoin.h  RenderPixel.cpp  RenderPixel.h  Task.h  TaskFactory.cpp  TaskFactory.h
src/TracerImplementations/: MuianRayTracer.cpp  MuianRayTracer.h  TracerInterface.h
